# internal/model/employee.go
@@ -1,0 +1,11 @@
+package model
+
+import (
+	"github.com/google/uuid"
+)
+
+type Employee struct {
+	ID              uuid.UUID
+	Username        string
+	OrganizationIDs []uuid.UUID
+}
